--- a/intro.qmd
+++ b/intro.qmd
@@ -20,11 +20,15 @@ It easily reminds me of the basic concepts of RS that I learned by myself during
 
 ## Summary of this class
 
+::: callout-tip
+## **Summary**
+
 -   **Tele-sensing Cities and Environments:** This is a course that introduces the basic principles and applications of tele-sensing, with a focus on urban and environmental issues.
 
 -   **Types and principles of remote sensing:** Remote sensing is divided into active and passive, depending on whether it has its own energy transmitter. Remote sensing data is affected by the interaction of electromagnetic waves with the atmosphere and the surface, and needs to be corrected and processed.
 
 -   **Format and resolution of remote sensing data:** Remote sensing data is usually raster data and has different storage formats and ways of organizing. The quality and application of remote sensing data are constrained by spatial, spectral, temporal and radiative resolution.
+:::
 
 ## Basic concepts and principles of remote sensing
 
@@ -32,19 +36,27 @@ It easily reminds me of the basic concepts of RS that I learned by myself during
 
 The difference between the two is that passive sensors are affected by atmospheric scattering and need to work when light conditions are good, while active sensors can penetrate clouds, volcanic ash and atmospheric conditions and can work at night.
 
-+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Active remote sensing example                                                                                                                                                                                                                                                                                                                             | Passive remote sensing example                                                                                                                                                                                                                                                                                                                                             |
-+:=========================================================================================================================================================================================================================================================================================================================================================:+:==========================================================================================================================================================================================================================================================================================================================================================================:+
-| For the untrained eye, it’s just a bunch of black and white pixels. But the reality is that there’s more than meets the eye. For example, the 3 main types of backscatter are: Specular reflection Double-bounce Diffuse scattering                                                                                                                       | Passive remote sensing can be very similar to how our eyes interpret the world. But the power of passive remote sensing is to see light in the whole [electromagnetic spectrum](https://gisgeography.com/multispectral-vs-hyperspectral-imagery-explained/){style="blue"}. For example, this multispectral image can have different band combinations like color infrared. |
-+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| An example of an active sensor is [synthetic Aperture radar (SAR)](https://gisgeography.com/synthetic-aperture-radar-examples/){style="blue"}, which can "see through the clouds" and has polarization characteristics that can reflect different electromagnetic waves based on surface roughness, shape, orientation, humidity, salinity, density, etc. | In terms of passive remote sensing, the [Landsat mission](http://landsat.gsfc.nasa.gov/) is the longest-running earth observation program. On board Landsat-8, [OLI](https://gisgeography.com/landsat-8-bands-combinations/){.illustration style="blue"} generates 9 spectral bands (Band 1 to 9).                                                                         |
-|                                                                                                                                                                                                                                                                                                                                                           |                                                                                                                                                                                                                                                                                                                                                                            |
-|                                                                                                                                                                                                                                                                                                                                                           | ![](images/clipboard-2255416882.png)                                                                                                                                                                                                                                                                                                                                       |
-+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| ![](images/clipboard-3788896385.png)                                                                                                                                                                                                                                                                                                                      | *![](images/clipboard-3968367586.png)*                                                                                                                                                                                                                                                                                                                                     |
-|                                                                                                                                                                                                                                                                                                                                                           |                                                                                                                                                                                                                                                                                                                                                                            |
-| *a SAR image*                                                                                                                                                                                                                                                                                                                                             | *Rocky Mountains in true color*                                                                                                                                                                                                                                                                                                                                            |
-+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
++---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Active remote sensing example                                                                                                                                                                                                                                                                                                                                       | Passive remote sensing example                                                                                                                                                                                                                                                                                                                                                       |
++:===================================================================================================================================================================================================================================================================================================================================================================:+:====================================================================================================================================================================================================================================================================================================================================================================================:+
+| For the untrained eye, it’s just a bunch of black and white pixels. But the reality is that there’s more than meets the eye. For example, the 3 main types of backscatter are: Specular reflection Double-bounce Diffuse scattering                                                                                                                                 | Passive remote sensing can be very similar to how our eyes interpret the world. But the power of passive remote sensing is to see light in the whole [electromagnetic spectrum](https://gisgeography.com/multispectral-vs-hyperspectral-imagery-explained/){style="blue"}[^intro-1]. For example, this multispectral image can have different band combinations like color infrared. |
++---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| An example of an active sensor is [synthetic Aperture radar (SAR)](https://gisgeography.com/synthetic-aperture-radar-examples/){style="blue"}[^intro-2], which can "see through the clouds" and has polarization characteristics that can reflect different electromagnetic waves based on surface roughness, shape, orientation, humidity, salinity, density, etc. | In terms of passive remote sensing, the [Landsat mission](http://landsat.gsfc.nasa.gov/)[^intro-3] is the longest-running earth observation program. On board Landsat-8, [OLI](https://landsat.gsfc.nasa.gov/satellites/landsat-8/spacecraft-instruments/operational-land-imager/){.illustration style="blue"}[^intro-4] generates 9 spectral bands (Band 1 to 9).                   |
+|                                                                                                                                                                                                                                                                                                                                                                     |                                                                                                                                                                                                                                                                                                                                                                                      |
+|                                                                                                                                                                                                                                                                                                                                                                     | ![](images/clipboard-2255416882.png)                                                                                                                                                                                                                                                                                                                                                 |
++---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| ![](images/clipboard-3788896385.png)                                                                                                                                                                                                                                                                                                                                | *![](images/clipboard-3968367586.png)*                                                                                                                                                                                                                                                                                                                                               |
+|                                                                                                                                                                                                                                                                                                                                                                     |                                                                                                                                                                                                                                                                                                                                                                                      |
+| *a SAR image*                                                                                                                                                                                                                                                                                                                                                       | *Rocky Mountains in true color*                                                                                                                                                                                                                                                                                                                                                      |
++---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+
+[^intro-1]: GISGeography (2024) *Multispectral vs Hyperspectral Imagery Explained*. Available at: <https://gisgeography.com/multispectral-vs-hyperspectral-imagery-explained/>(Accessed: 2 July 2024)
+
+[^intro-2]: GISGeography (2024) *Learn Synthetic Aperture Radar (SAR) by Example*. Available at: <https://gisgeography.com/synthetic-aperture-radar-examples/>(Accessed: 2 July 2024)
+
+[^intro-3]: National Aeronautics and Space Administration (2024) *Landsat Science*. Available at: <http://landsat.gsfc.nasa.gov/>(Accessed: 2 July 2024)
+
+[^intro-4]: National Aeronautics and Space Administration (2024) *Operational Land Imager*. Available at: <https://landsat.gsfc.nasa.gov/satellites/landsat-8/spacecraft-instruments/operational-land-imager/>(Accessed: 2 July 2024)
 
 ### The relation between electromagnetic wave and multispectrum
 
@@ -54,14 +66,15 @@ Multispectral remote sensing refers to the remote sensing observation and resear
 
 ![Multispectral common channels](images/clipboard-1755175584.png)
 
-![Comparison of spectral bands between Sentinel-2 and Landsat-8][^intro-1][@lópez-puigdollers2021](https://www.mdpi.com/remotesensing/remotesensing-13-00992/article_deploy/html/images/remotesensing-13-00992-g003.png){.illustration style="gray" fig-align="center"}
+![Comparison of spectral bands between Sentinel-2 and Landsat-8[^intro-5].](images/remotesensing-13-00992-g003.webp)
 
+[^intro-5]: López-Puigdollers D, Mateo-García G, Gómez-Chova L. Benchmarking Deep Learning Models for Cloud Detection in Landsat-8 and Sentinel-2 Images. *Remote Sensing*. 2021; 13(5):992. <https://doi.org/10.3390/rs13050992>
 
+[^intro-6]: López-Puigdollers D, Mateo-García G, Gómez-Chova L. Benchmarking Deep Learning Models for Cloud Detection in Landsat-8 and Sentinel-2 Images. *Remote Sensing*. 2021; 13(5):992. <https://doi.org/10.3390/rs13050992>
 
 In general, the relationship between electromagnetic wave and multi-spectrum is that multi-spectral remote sensing uses different bands of electromagnetic wave, and more information of ground targets can be obtained by analyzing the information of these bands.
 
 ## Application
-
 
 ## Reflection
 
