--- a/wk2_Landsat9.Rmd
+++ b/wk2_Landsat9.Rmd
@@ -127,10 +127,10 @@ source:[NASA](https://landsat.gsfc.nasa.gov/satellites/timeline/)
 
 ### 1.2 Mission Objectives
 <div style="display: flex; justify-content: space-around; align-items: flex-start; text-align: right;">
-  <figure style="margin: 0 5px; flex-basis: calc(50% - 10px);">
-    <figcaption style="font-size: 18px; text-align: middle;">
-      <ul style="list-style-type: disc; padding-left: 0; margin: 10px 0; text-align: left;">
-        <li style="font-size: 18px;">The primary objectives of Landsat 9 include continuous monitoring of the Earth's surface, providing high-resolution Earth imaging data, and supporting various scientific research and applications such as land use monitoring, agriculture, forestry, urban planning, and environmental management.</li>
+  <figure style="margin: 0 0px; flex-basis: calc(55% - 5px);">
+    <figcaption style="font-size: 24px; text-align: middle;">
+      <ul style="list-style-type: disc; padding-left: 0; margin: 5px 0; text-align: left;">
+        <li style="font-size: 20px;">The primary objectives of Landsat 9 include continuous monitoring of the Earth's surface, providing high-resolution Earth imaging data, and supporting various scientific research and applications such as land use monitoring, agriculture, forestry, urban planning, and environmental management.</li>
       </ul>
     </figcaption>
   </figure>
@@ -142,29 +142,14 @@ source:[NASA](https://landsat.gsfc.nasa.gov/satellites/timeline/)
 
 Landsat 9 Mission Logo: [View Media Details](https://www.usgs.gov/landsat-missions/landsat-9#:~:text=Landsat%209%20is%20a%20partnership%20between%20the%20U.S.,for%20monitoring%2C%20understanding%2C%20and%20manag%C2%ADing%20Earth%E2%80%99s%20natural%20resources.)
 
----
-### 1.2 Mission Objectives:
-
-<div class="custom-page">
-.pull-left[
-    
-The primary objectives of Landsat 9 include continuous monitoring of the Earth's surface, providing high-resolution Earth imaging data, and supporting various scientific research and applications such as land use monitoring, agriculture, forestry, urban planning, and environmental management.
-
-]
-
-.pull-right[
-```{r echo=FALSE, out.width='300%', fig.align='right'}
-knitr::include_graphics("images/Landsat9factsheet.png")
-```
-]
-
-</div>
-Landsat 9 Mission Logo: [View Media Details](https://www.usgs.gov/landsat-missions/landsat-9#:~:text=Landsat%209%20is%20a%20partnership%20between%20the%20U.S.,for%20monitoring%2C%20understanding%2C%20and%20manag%C2%ADing%20Earth%E2%80%99s%20natural%20resources.)
 
 
 ---
 ## 2 Landsat 9 Instruments
 
+<div class="justify-text">
+The satellite carries two science instruments, the Operational Land Imager 2 (OLI-2) and the Thermal Infrared Sensor 2 (TIRS-2). 
+</div>
 
 **Operational Land Imager 2 (OLI-2):**
 OLI-2 is an advanced imaging instrument carried by Landsat 9, featuring high resolution and multi-band observation capabilities. It captures spectral characteristics of the Earth's surface, aiding in land surface identification and monitoring.
@@ -178,24 +163,49 @@ TIRS-2 is another crucial sensor specialized in measuring thermal infrared radia
 oli_tir="https://d9-wret.s3.us-west-2.amazonaws.com/assets/palladium/production/s3fs-public/thumbnails/image/OLI2-TIRS-2.PNG"
 knitr::include_graphics(oli_tir)
 ```
-[](https://www.gov.uk/government/news/environment-agency-working-day-and-night-to-reduce-flood-impact--2)
-
-
----
-## 3 Significance of the Landsat 9 Mission
-
-Importance of Earth Observation and Environmental Monitoring:
-The Landsat 9 mission is significant in continuously monitoring changes on Earth's surface, aiding scientists and decision-makers in understanding Earth system dynamics, environmental protection, resource management, and climate change adaptation.
-
-
+source:[source](https://www.gov.uk/government/news/environment-agency-working-day-and-night-to-reduce-flood-impact--2)
 
 ---
-## 3 Significance of the Landsat 9 Mission
+## 2 Landsat 9 Instruments
 
 
+<div style="font-size: 80%; width: 80%; margin: auto;">
 
-Role of Data in Scientific Research and Applications:
-Data from Landsat 9 plays a crucial role in various scientific research and applications, supporting activities such as land use monitoring, agricultural production optimization, urban planning, and environmental protection.
+
+| Band | Description               | Wavelength (µm)        | Resolution (m) |
+|------|---------------------------|------------------------|----------------|
+| 1    | Visible Coastal Aerosol   | 0.43 - 0.45            | 30             |
+| 2    | Visible Blue              | 0.450 - 0.51           | 30             |
+| 3    | Visible Green             | 0.53 - 0.59            | 30             |
+| 4    | Red                       | 0.64 - 0.67            | 30             |
+| 5    | Near-Infrared             | 0.85 - 0.88            | 30             |
+| 6    | SWIR 1                    | 1.57 - 1.65            | 30             |
+| 7    | SWIR 2                    | 2.11 - 2.29            | 30             |
+| 8    | Panchromatic (PAN)        | 0.50 - 0.68            | 15             |
+| 9    | Cirrus                    | 1.36 - 1.38            | 30             |
+| 10   | TIRS 1                    | 10.6 - 11.19           | 100            |
+| 11   | TIRS 2                    | 11.5 - 12.51           | 100            |
+
+</div>
+The tables above list the spectral bands of the Operational Land Imager 2 (OLI-2) and the Thermal Infrared Sensor 2 (TIRS-2) on Landsat 9, detailing their respective wavelengths and resolutions.
+</br></br>
+source:[USGS Technical Announcement (February 2022)](https://www.usgs.gov/landsat-missions/landsat-9#:~:text=Landsat%209%20is%20a%20partnership%20between%20the%20U.S.,for%20monitoring%2C%20understanding%2C%20and%20manag%C2%ADing%20Earth%E2%80%99s%20natural%20resources.)
+
+---
+## 3 Significance of the Landsat 9
+
+
+1. **Observational Continuity**: Landsat 9 extends our ability to measure changes on a global scale, allowing us to differentiate between human-induced and natural changes. This continuity is essential for informed land use decisions.
+
+2. **Improved Instruments**: Landsat 9 carries two science instruments:
+   - **OLI-2**: Captures observations in visible, near-infrared, and shortwave-infrared light.
+   - **TIRS-2**: Measures thermal infrared radiation (heat) from Earth's surfaces, improving upon Landsat 8's TIRS instrument.
+
+3. **Temporal Coverage**: Landsat 9's orbit is eight days out of phase with Landsat 8, providing more frequent observations. Applications like tropical deforestation alerts, water quality monitoring, and crop condition reports benefit from this increased temporal coverage.
+
+4. **Global Constellation**: Landsat has become a cornerstone of the global constellation of imagers. Its science quality and careful calibration make it a "gold standard" for harmonizing multiple sources of satellite imagery.
+
+source:[Landsat 9 Mission Details](https://landsat.gsfc.nasa.gov/satellites/landsat-9/landsat-9-mission-details/)
 
 ---
 ## 4 Scientific Applications of Landsat 9
@@ -205,6 +215,45 @@ xaringanExtra::use_panelset()
 ```
 
 .panelset[
+
+
+.panel[.panel-name[Agriculture and Forestry]
+.pull-left[
+<div style="text-align: middle;">
+  <img src="./images/cropland.png" style="width: 180%; max-width: 120%; height: auto;">
+</div>
+]
+
+.pull-right[
+Agricultural and forestry managers can leverage Landsat 9 data to monitor crop growth conditions, forest cover changes, etc., optimizing agricultural production and forest resource management.(Leslie et al., 2017)
+]
+<br/><br/>
+source: [USDA/FAS and NASA/GSFC/GIMMS Global Agriculture Monitoring (GLAM) Project]( http://glam1.gsfc.nasa.gov/)
+]
+
+
+
+.panel[.panel-name[Environmental Management]
+
+
+.pull-left[
+<div style="text-align: middle;">
+  <img src="https://images.theconversation.com/files/508818/original/file-20230208-15-lbcw9x.gif?ixlib=rb-4.1.0&q=30&auto=format&w=600&h=349&fit=crop&dpr=2" style="width: 90%; max-width: 100%; height: auto;">
+</div>
+]
+.pull-right[
+<div style="text-align: middle;">
+  <img src="https://images.theconversation.com/files/508816/original/file-20230208-16-ktgkpl.gif?ixlib=rb-4.1.0&q=30&auto=format&w=600&h=352&fit=crop&dpr=2" style="width: 90%; max-width: 100%; height: auto;">
+</div>
+]
+
+
+Landsat 9 data is crucial for environmental monitoring, natural resource conservation, and ecosystem management, facilitating the identification of ecologically sensitive areas, pollution monitoring, etc. Above images individually shows the shoreline retreat in the Parc Natural del Delta, Spai, and nriver dynamics in Pucallpa, Peru
+
+[Wu, Q. (2024)](https://theconversation.com/how-to-use-free-satellite-data-to-monitor-natural-disasters-and-environmental-changes-198140)]
+
+
+
 
 .panel[.panel-name[Land Use Monitoring]
 
@@ -217,34 +266,22 @@ Landsat 9 data can be utilized for monitoring land use and cover changes, includ
 - Crops affected about **225,000 acres**
 
 
-
-source: [Voanews](https://www.voanews.com/a/floods-strike-blow-to-china-s-faltering-economy-/7221953.html), [Reuters](https://www.reuters.com/world/china/china-floods-hit-rice-corn-crops-trigger-food-inflation-worries-2023-08-11/)
-]
-
-
-.panel[.panel-name[Agriculture and Forestry]
-
-Agricultural and forestry managers can leverage Landsat 9 data to monitor crop growth conditions, forest cover changes, etc., optimizing agricultural production and forest resource management.
-
-
-source: [Scmp](https://www.scmp.com/economy/china-economy/article/3143212/china-floods-economic-damage-livestock-industry-tops-us348), [Reuters](https://www.reuters.com/world/china/china-floods-hit-rice-corn-crops-trigger-food-inflation-worries-2023-08-11/)
+source: [Hansen et al., 2021](https://www.sciencedirect.com/science/article/abs/pii/S0034425712000314)
 ]
 
 
 .panel[.panel-name[Urban Planning]
-
+.pull-left[
 Landsat 9 data supports urban planning and development monitoring, including urban expansion, land use structure changes, etc., providing valuable information for urban planners and policymakers.
+]
+.pull-right[
+<div style="text-align: middle;">
+  <img src="https://landsat.gsfc.nasa.gov/wp-content/uploads/2022/03/LandsatFactsheet_urban_front.png" style="width: 80%; max-width: 80%; height: auto;">
+</div>
+]
 
 
-source: [Reuters](https://www.reuters.com/world/china/china-floods-hit-rice-corn-crops-trigger-food-inflation-worries-2023-08-11/)]
-
-
-
-.panel[.panel-name[Environmental Management]
-
-Landsat 9 data is crucial for environmental monitoring, natural resource conservation, and ecosystem management, facilitating the identification of ecologically sensitive areas, pollution monitoring, etc.
-
-source: [Reuters](https://www.reuters.com/world/china/china-floods-hit-rice-corn-crops-trigger-food-inflation-worries-2023-08-11/)]
+source: [Landsat’s Role in Supporting Urban Planning](https://landsat.gsfc.nasa.gov/benefits/urban-development/#:~:text=Using%20Landsat%20data%2C%20people%20can%20monitor%20urban%20change,infrared%20reflectivity%20consistently%2C%20objectively%2C%20and%20dependably%20over%20time.)]
 
 ]
 
@@ -288,5 +325,8 @@ With continuous technological advancements, Earth observation technology is expe
 - NASA (2024) _Landsat Program: 50 Years of Earth Observations_. Available at: https://landsat.gsfc.nasa.gov/satellites/timeline/ (Accessed: 5 July 2024).
 
 
+- Hansen, M.C. and Loveland, T.R., 2012. _A review of large area monitoring of land cover change using Landsat data_. Remote Sensing of Environment, 122, pp.66-74.
 
+- Leslie, C.R., Serbina, L.O., and Miller, H.M., 2017, _Landsat and agriculture—Case studies on the uses and benefits of Landsat imagery in agricultural monitoring and production: U.S. Geological Survey Open-File Report_ 2017–1034, 27 p., https://doi.org/10.3133/ofr20171034.
 
+- Wu, Q. (2024). _Where to find satellite images and how to use them to monitor environmental changes_, NASA Earth Observatory. Available at: [URL] (Accessed: 5 July 2024)
